5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1793_1613.log
== TEST (2019-05-30 18:43:05) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:02) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
va=input("string")
print(va)
print(v)

while()
-- ERROR:
File "XXXX", line 7
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:09) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
va=input("string")
print(va)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:07) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
va=input("string")
print(va)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:32) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:04) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:32) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:31) 
-- CODE:
from numpy import*
v=array(eval(input("vetor  ")))
va=input("v")
print(va)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:01) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<lend(v)):
	i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=='DANCA'):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:53) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<lend(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=='DANCA'):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:40) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=='DANCA'):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:26) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=="DANCA"):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:40) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=="DANCA"):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:24) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=='DANCA'):
		cont=v[0]*6.7
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:26) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[0]=='ALONGAMENTO'):
		cont=v[0]*3
	elif(va[0]=='CORRIDA'):
		cont=v[0]*10.3
	elif(va[0]=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[0]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:30:28) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[S]=='ALONGAMENTO'):
		cont=v[s]*3
	elif(va[s]=='CORRIDA'):
		cont=v[s]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:04) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=v[s]*3
	elif(va[s]=='CORRIDA'):
		cont=v[s]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:37) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(v)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=v[s]*3
	elif(va[s]=='CORRIDA'):
		cont=v[s]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=v[0]*9.7
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:41) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=v[s]*3
	elif(va[s]=='CORRIDA'):
		cont=v[s]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=v[0]*9.7
	s=s+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:20) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s].upper()=='ALONGAMENTO'):
		cont=v[s]*3
	elif(va[s].upper()=='CORRIDA'):
		cont=v[s]*10.3
	elif(va[s].upper()=='DANCA'):
		cont=cont+(v[0]*6.7)
	elif(va[s].upper()=='ESCALADA'):
		cont=v[0]*9.7
	s=s+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:43) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s].upper()=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s].upper()=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s].upper()=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s].upper()=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:04) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s].upper()=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s].upper()=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s].upper()=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s].upper()=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:43:32) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s].upper()=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s].upper()=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s].upper()=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s].upper()=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.637334
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:43:34) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s].upper()=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s].upper()=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s].upper()=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s].upper()=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.523079
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:43:59) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s]=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.403748
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:02) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s]=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:02) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s]=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.415247
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:03) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if(va[s]=='ALONGAMENTO'):
		cont=cont+v[x]*3
	elif(va[s]=='CORRIDA'):
		cont=cont+v[x]*10.3
	elif(va[s]=='DANCA'):
		cont=cont+(v[x]*6.7)
	elif(va[s]=='ESCALADA'):
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.812115
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
atividadesvetor  0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
atividadesvetor  0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:35) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.378656
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:40) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.582075
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:41) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.847141
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:41) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<len(va)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
1.64569
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:48:19) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<size(v)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.438452
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:48:21) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=array(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<size(v)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.515932
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:17) 
-- CODE:
from numpy import*
va=input("atividades").upper()
v=(eval(input("vetor  ")))
x=0
i=0
s=0
cont=0
while(i<size(v)):
	i=i+1
	if va[s]=='ALONGAMENTO':
		cont=cont+v[x]*3
	elif va[s]=='CORRIDA' :
		cont=cont+v[x]*10.3
	elif va[s]=='DANCA' :
		cont=cont+(v[x]*6.7)
	elif va[s]=='ESCALADA' :
		cont=cont+v[x]*9.7
	s=s+1
	x=x+1
print(cont)
-- EXECUTION TIME:
0.536064
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
0
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
